--- a/index.html
+++ b/index.html
@@ -1,12 +1,316 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <meta name="keywords" content="Гаджеты, Квадрокоптер">
+  <meta name="description" content="Интернет-магазин гаджетов с оригинальным дизайном">
+  <title>HTML Academy: Девайс</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+  <!-- Не нашёл шрифт в инете Gilroy extrabold -->
+</head>
 
-  </body>
+<body>
+
+  <header class="main-header">
+    <div class="logo-container"><a class="logo">Device</a></div>
+    <nav class="user-menu">
+      <form action="#" method="post">
+        <input type="search" placeholder="Поиск по сайту">
+        <input type="submit" value="Найти">
+      </form>
+      <ul>
+<!--       Как должна отображаться страница при регистрации на сайте? Просто добаляется имя пользователя?-->
+        <li class="user-name"><a href="#">Валентин Петухов</a></li>
+        <li><a href="#">Войти</a></li>
+        <li><a href="#">Сравнить</a></li>
+        <li><a href="#">Корзина</a></li>
+      </ul>
+    </nav>
+    <nav class="main-menu">
+      <ul>
+        <li><a href="#">Каталог таваров</a>
+          <ul class="sub-menu">
+            <li>
+              <ul class="video-gadgets">
+                <li><a href="#">Виртуальная реальность</a></li>
+                <li><a href="#">Моноподы для слефи</a></li>
+                <li><a href="#">Экшн-камеры</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul class="wrist-accessories">
+                <li><a href="#">Фитнес-браслеты</a></li>
+                <li><a href="#">Умные часы</a></li>
+              </ul>
+            </li>
+            <li>
+              <ul class="quadcopters">
+                <li><a href="#">Квадрокоптеры</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <h1 class="visually-hidden">Магазин Device</h1>
+
+    <section class="promo">
+      <h2 class="visually-hidden">Промо-блок</h2>
+      <div class="promo-slider">
+        <input id="promo-slide1" name="promo-slides" type="radio" checked>
+        <input id="promo-slide2" name="promo-slides" type="radio">
+        <input id="promo-slide3" name="promo-slides" type="radio">
+        <ul class="promo-list">
+          <li class="promo-page">
+            <div class="column">
+              <img src="#" alt="Гаджет-1">
+            </div>
+            <div class="column">
+              <h3 class="promo-page-title">01</h3>
+              <b class="promo-text">Делай селфи, как Бен Стиллер!</b>
+              <p class="content">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+              <a href="#" class="btn">Подробнее</a>
+              <table class="characteristics-of-goods">
+                <tr class="value">
+                  <td>8,5 м</td>
+                  <td>5 кг</td>
+                  <td>Карбон</td>
+                </tr>
+                <tr class="characteristic">
+                  <td>Длина палки</td>
+                  <td>Вес палки</td>
+                  <td>Материал</td>
+                </tr>
+              </table>
+            </div>
+          </li>
+          <li class="promo-page">
+            <div class="column">
+              <img src="#" alt="Гаджет-2">
+            </div>
+            <div class="column">
+              <h3 class="promo-page-title">02</h3>
+              <b class="promo-text">Худеем правильно!</b>
+              <p class="content">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+              <a href="#" class="btn">Подробнее</a>
+              <table class="characteristics-of-goods">
+                <tr class="value">
+                  <td>48 часов</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr class="characteristic">
+                  <td>Без подзарядки</td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </table>
+            </div>
+          </li>
+          <li class="promo-page">
+            <div class="column">
+              <img src="#" alt="Гаджет-3">
+            </div>
+            <div class="column">
+              <h3 class="promo-page-title">03</h3>
+              <b class="promo-text">Порхает как бабочка, жалит как пчела!</b>
+              <p class="content">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+              <a href="#" class="btn">Подробнее</a>
+              <table class="characteristics-of-goods">
+                <tr class="value">
+                  <td>800 м</td>
+                  <td>50 м</td>
+                  <td></td>
+                </tr>
+                <tr class="characteristic">
+                  <td>Дальность полета</td>
+                  <td>Радиус поражения</td>
+                  <td></td>
+                </tr>
+              </table>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="promo-active">
+        <label for="promo-slide1">Подпись-1</label>
+        <label for="promo-slide2">Подпись-2</label>
+        <label for="promo-slide3">Подпись-3</label>
+      </div>
+    </section>
+
+    <section class="popular-product">
+      <h2 class="visually-hidden">Популярные продукты</h2>
+      <ul class="popular-product-list">
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Виртуальная реальность</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Моноподы для селфи</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Экшн-камеры</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Фитнес-браслеты</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Умные часы</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <h3 class="popular-product-title">Квадракоптеры</h3>
+            <div class="popular-product-image"></div>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <div class="services-slider">
+        <input id="services-slide1" name="services-slides" type="radio" checked>
+        <input id="services-slide2" name="services-slides" type="radio">
+        <input id="services-slide3" name="services-slides" type="radio">
+        <ul class="services-list">
+          <li class="services-page">
+            <h3>Доставка</h3>
+            <p class="content">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+          </li>
+          <li class="services-page">
+            <h3>Гарантия</h3>
+            <p class="content">Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+          </li>
+          <li class="services-page">
+            <h3>Кредит</h3>
+            <p class="content">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+          </li>
+        </ul>
+        <div class="services-active">
+          <label for="services-slide1">Доставка</label>
+          <label for="services-slide2">Гарантия</label>
+          <label for="services-slide3">Кредит</label>
+        </div>
+      </div>
+    </section>
+
+    <section class="our-partner">
+      <h2 class="visually-hidden">Наши партнёры</h2>
+      <ul class="our-partner-list">
+        <li><a href="#"><img src="#" alt="dji" width="1" height="1"></a></li>
+        <li><a href="#"><img src="#" alt="SP-Gadgets" width="1" height="1"></a></li>
+        <li><a href="#"><img src="#" alt="GoPro" width="1" height="1"></a></li>
+        <li><a href="#"><img src="#" alt="Vive" width="1" height="1"></a></li>
+      </ul>
+    </section>
+
+    <section class="about-us">
+      <h2 class="section-title">О нас</h2>
+      <p class="content">Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас. </p>
+      <p class="content">Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями: </p>
+      <ul class="companies-working-with-us">
+        <li><b>Деловые линии</b></li>
+        <li><b>Автотрейдинг</b></li>
+        <li><b>ЖелДорЭкспидиция</b></li>
+      </ul>
+      <a href="#" class="btn">Подробнее о нас</a>
+    </section>
+
+    <section class="contacts">
+      <h2>Контакты</h2>
+      <p class="content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+      <div class="map-container"></div>
+      <a href="#" class="btn">Напишите нам</a>
+    </section>
+
+    <!--    popup к секции services-->
+    <section class="modal-write-us">
+      <h2 class="visually-hidden">Свяжитесь с нами</h2>
+      <span class="modal-close">x</span>
+      <form action="#" method="post">
+        <input id="fullname-field" name="fullname" type="text" placeholder="Имя Фамилия">
+        <label for="fullname-field">Ваше имя:</label>
+        <input id="email-field" name="email" type="text" placeholder="email@example.com">
+        <label for="email-field">Ваш e-mail:</label>
+        <textarea id="comment-field" name="comment" cols="30" rows="10" placeholder="В свободной форме"></textarea>
+        <label for="comment-field">Текст письма:</label>
+        <input class="btn" type="submit" value="Отправить">
+      </form>
+    </section>
+
+    <!--    popup к секции contacts-->
+    <section class="modal-map">
+      <h2 class="visually-hidden">Карта</h2>
+      <span class="modal-close">x</span>
+      <div class="map"></div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="footer-top">
+      <div class="logo"><a href="#">Device</a></div>
+      <nav class="user-menu">
+        <ul>
+          <li class="user-name"><a href="#">Валентин Петухов</a></li>
+          <li><a href="#">Войти</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="footer-middle">
+      <p class="adress content">г.Москва ул.Строителей, 15</p>
+      <nav class="footer-main-nav">
+        <ul>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <p class="phone content">Тел:+7(495)495-95-95</p>
+    </div>
+    <div class="footer-bottom">
+      <div class="social">
+        <ul>
+          <li><a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+          <li><a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a></li>
+        </ul>
+      </div>
+      <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank"><img src="#" alt="Интенсивный онлайн‑курс 
+Профессиональный HTML и CSS,
+уровень 1"></a>
+    </div>
+  </footer>
+
+  <script src="js/main.js"></script>
+
+</body>
+
 </html>
