Подключение контентных изображений
1. Добавлена папка с изображениями.
2. Подключены контентные изображения.
3. Отредактирована разметка.

--- a/monopods-for-selfi.html
+++ b/monopods-for-selfi.html
@@ -183,7 +183,7 @@
           </h3>
           <span class="catalog-item-price">500 руб.</span>
           <p class="catalog-item-image">
-            <img src="img/product-1.jpg" alt="item1" width="1" height="1">
+            <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
           </p>
           <p>
             <a href="#" class="btn">В корзину</a>
@@ -196,12 +196,12 @@
         <li class="catalog-item">
           <h3>
             <a href="catalog-item.html">
-              <span class="catalog-item-title">Любительская селфи палка</span>
+              <span class="catalog-item-title">Профессиональная селфи-палка</span>
             </a>
           </h3>
           <span class="catalog-item-price">500 руб.</span>
           <p class="catalog-item-image">
-            <img src="#" alt="item2" width="1" height="1">
+            <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
           </p>
           <p>
             <a href="#" class="btn">В корзину</a>
@@ -214,12 +214,12 @@
         <li class="catalog-item">
           <h3>
             <a href="catalog-item.html">
-              <span class="catalog-item-title">Любительская селфи палка</span>
+              <span class="catalog-item-title">Непотопляемая селфи-палка</span>
             </a>
           </h3>
           <span class="catalog-item-price">500 руб.</span>
           <p class="catalog-item-image">
-            <img src="#" alt="item3" width="1" height="1">
+            <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
           </p>
           <p>
             <a href="#" class="btn">В корзину</a>
@@ -232,12 +232,12 @@
         <li class="catalog-item">
           <h3>
             <a href="catalog-item.html">
-              <span class="catalog-item-title">Любительская селфи палка</span>
+              <span class="catalog-item-title">Селфи-палка &#8220;Следуй за мной&#8221;</span>
             </a>
           </h3>
           <span class="catalog-item-price">500 руб.</span>
           <p class="catalog-item-image">
-            <img src="#" alt="item4" width="1" height="1">
+            <img src="img/item-4.jpg" width="360" height="380" alt="Селфи-палка &#8220;Следуй за мной&#8221;">
           </p>
           <p>
             <a href="#" class="btn">В корзину</a>
@@ -295,18 +295,30 @@
       <p class="adress content">г.Москва ул.Строителей, 15</p>
       <div class="footer-main-nav">
         <ul>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </div>
       <p class="phone content">Тел:+7(495)495-95-95</p>
     </div>
     <div class="footer-bottom">
       <ul class="social-list">
-        <li><a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a></li>
-        <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
-        <li><a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a></li>
+        <li>
+          <a href="https://ru-ru.facebook.com/" target="_blank">Facebook</a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/" target="_blank">Instagram</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/?lang=ru" target="_blank">Twitter</a>
+        </li>
       </ul>
       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">
         <img src="#" alt="Интенсивный онлайн‑курс Профессиональный HTML и CSS,уровень 1">
