--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </table>
             </div>
             <div class="column">
-              <img src="#" alt="Гаджет-1">
+              <img src="img/slider-1.png" width="384" height="486" alt="Палка для селфи длиной 8 метров: &#8220;Делай селфи как Бен Стилер!&#8221;">
             </div>
           </li>
           <li class="promo-item">
@@ -142,7 +142,7 @@
               </table>
             </div>
             <div class="column">
-              <img src="#" alt="Гаджет-2">
+              <img src="img/slider-2.png" width="345" height="485" alt="Мотивирующий фитнес-браслет: &#8220;Я вижу, сто ты снова ешь&#8221;">
             </div>
           </li>
           <li class="promo-item">
@@ -165,7 +165,7 @@
               </table>
             </div>
             <div class="column">
-              <img src="#" alt="Гаджет-3">
+              <img src="img/slider-3.png" width="526" height="334" alt="Квадрокоптер: &#8220;Порхает как бабочка, жалит как пчела!&#8221;">
             </div>
           </li>
         </ol>
@@ -251,16 +251,24 @@
       <h2 class="visually-hidden">Наши партнёры</h2>
       <ul class="our-partner-list">
         <li>
-          <a href="#"><img src="#" alt="dji" width="1" height="1"></a>
+          <a href="#">
+            <img src="img/logo-partner-1.png" width="260" height="100" alt="Компания dji">
+          </a>
         </li>
         <li>
-          <a href="#"><img src="#" alt="SP-Gadgets" width="1" height="1"></a>
+          <a href="#">
+            <img src="img/logo-partner-2.png" width="260" height="100" alt="Компания SP-Gadgets">
+          </a>
         </li>
         <li>
-          <a href="#"><img src="#" alt="GoPro" width="1" height="1"></a>
+          <a href="#">
+            <img src="img/logo-partner-3.png" width="260" height="100" alt="Компания GoPro">
+          </a>
         </li>
         <li>
-          <a href="#"><img src="#" alt="Vive" width="1" height="1"></a>
+          <a href="#">
+            <img src="img/logo-partner-4.png" width="260" height="100" alt="Компания Vive">
+          </a>
         </li>
       </ul>
     </section>
@@ -285,7 +293,9 @@
     <section class="contacts">
       <h2>Контакты</h2>
       <p class="content">Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-      <div class="map-container"></div>
+      <div class="map-container">
+        <img src="img/map.jpg" width="560" height="222" alt="Улица Строителей, 15">
+      </div>
       <a href="#" class="btn">Напишите нам</a>
     </section>
 
@@ -345,7 +355,9 @@
           <li>
             <a href="#">Гарантия</a>
           </li>
-          <li><a href="#">Контакты</a></li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
         </ul>
       </nav>
       <p class="phone content">Тел:+7(495)495-95-95</p>
